--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>front-end</title>
+  <title>Broad Street Online</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
